Repairing the auto ellipsing of the NTOC. Adding the functionallity to jquery.autoEllipsis.js to restore the text it truncates
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@60995 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/wikiEditor.toc.css
+++ b/css/wikiEditor.toc.css
@@ -61,41 +61,41 @@ body.rtl .tab-toc {
 	cursor: pointer;
 	color: #0645ad;
 }
-.wikiEditor-ui-toc ul li div span {
+.wikiEditor-ui-toc ul li div {
 	padding: 0.125em;
 	padding-left: 1em;
 }
-body.rtl .wikiEditor-ui-toc ul li div span {
+body.rtl .wikiEditor-ui-toc ul li div {
 	padding-right: 1em;
 }
-.wikiEditor-ui-toc ul ul li div span {
+.wikiEditor-ui-toc ul ul li div {
 	padding-left: 2em;
 }
-body.rtl .wikiEditor-ui-toc ul ul li div span {
+body.rtl .wikiEditor-ui-toc ul ul li div {
 	padding-right: 2em;
 }
-.wikiEditor-ui-toc ul ul ul li div span {
+.wikiEditor-ui-toc ul ul ul li div {
 	padding-left: 3em;
 }
-body.rtl .wikiEditor-ui-toc ul ul ul li div span {
+body.rtl .wikiEditor-ui-toc ul ul ul li div {
 	padding-right: 3em;
 }
-.wikiEditor-ui-toc ul ul ul ul li div span {
+.wikiEditor-ui-toc ul ul ul ul li div {
 	padding-left: 4em;
 }
-body.rtl .wikiEditor-ui-toc ul ul ul ul li div span {
+body.rtl .wikiEditor-ui-toc ul ul ul ul li div {
 	padding-right: 4em;
 }
-.wikiEditor-ui-toc ul ul ul ul ul li div span {
+.wikiEditor-ui-toc ul ul ul ul ul li div {
 	padding-left: 5em;
 }
-body.rtl .wikiEditor-ui-toc ul ul ul ul ul li div span {
+body.rtl .wikiEditor-ui-toc ul ul ul ul ul li div {
 	padding-right: 5em;
 }
-.wikiEditor-ui-toc ul ul ul ul ul ul li div span {
+.wikiEditor-ui-toc ul ul ul ul ul ul li div {
 	padding-left: 6em;
 }
-body.rtl wikiEditor-ui-toc ul ul ul ul ul ul li div span {
+body.rtl wikiEditor-ui-toc ul ul ul ul ul ul li div {
 	padding-right: 6em;
 }
 .wikiEditor-ui-toc ul li div.current {
